# pdf-report-generator

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
api/: __init__.py  main.py  models.py  routes.py
data/: expenses.json  revenue.json  sales.csv  sales.xlsx
docs/: DOCUMENTATION_INDEX.md  README.md
docs/01-getting-started/: deployment.md  first-report.md  installation.md  quick-start.md
docs/02-user-guide/: basic-concepts.md  configuration-overview.md  data-sources.md  styles.md  templates.md
docs/02-user-guide/elements/: chart.md  image.md  others.md  table-cell-alignment.md  table.md  text.md
docs/03-advanced-features/: bookmarks-links.md  chinese-fonts.md  cover-pages.md  font-quick-reference.md  headers-footers.md  images-handling.md  page-numbers.md  table-merging.md  table-of-contents.md
docs/04-api-reference/: configuration-schema.md  web-api.md
docs/05-examples/: font-configuration-examples.md
docs/07-appendix/: changelog.md  faq.md  glossary.md  resources.md
examples/: advanced_features_demo.py  api_usage.py  data_source_usage.py  font_configuration_example.py  library_usage_example.py  sample_usage.py  standalone_usage.py  table_alignment_demo.py  table_layout_demo.py  table_merge_example.py
fonts/: README.md
pdf_generator/: __init__.py  api_server.py  cli.py
pdf_generator/config/: __init__.py  parser.py  validator.py
pdf_generator/core/: __init__.py  cover_page.py  elements.py  generator.py  header_footer.py  page_template.py  styles.py  toc_generator.py
pdf_generator/data_sources/: __init__.py  api_source.py  base.py  csv_source.py  database.py  json_source.py
pdf_generator/templates/: cover_templates.py
pdf_generator/utils/: __init__.py  chart_generator.py  page_numbers.py
templates/: financial_report.json  sales_report.json  template_schema.json
