[project]
name = "pdf-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.105.0",
    "jinja2==3.1.2",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "openpyxl==3.1.2",
    "pandas==2.1.4",
    "pillow==10.1.0",
    "pydantic==2.5.3",
    "pytest==7.4.3",
    "python-multipart==0.0.6",
    "reportlab==4.0.7",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.25.0",
]
